--- a/src/seamless_communication/cards/conformer_shaw.yaml
+++ b/src/seamless_communication/cards/conformer_shaw.yaml
@@ -7,4 +7,4 @@
 name: conformer_shaw
 model_type: wav2vec2
 model_arch: conformer_shaw_600m
-checkpoint: "https://huggingface.co/facebook/conformer-shaw/resolve/main/conformer_shaw.pt"
+checkpoint: "https://hf-mirror.com/facebook/conformer-shaw/resolve/main/conformer_shaw.pt"
