--- a/src/seamless_communication/cards/unity_nllb-200.yaml
+++ b/src/seamless_communication/cards/unity_nllb-200.yaml
@@ -6,7 +6,7 @@
 
 name: unity_nllb-200
 model_type: unity
-tokenizer: "https://huggingface.co/facebook/seamless-m4t-medium/resolve/main/tokenizer.model"
+tokenizer: "https://hf-mirror.com/facebook/seamless-m4t-medium/resolve/main/tokenizer.model"
 default_lang: eng
 langs:
   - ace
